[project]
name = "pdf-generator-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Serafim",email = "mateuskolap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "ruff (>=0.9.7,<0.10.0)",
    "reportlab (>=4.3.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'